# bronze-kaleidoscope

./: .clangd  .gitignore  CMakeCache.txt  CMakeLists.txt  main.cpp  readme.md
src/: CMakeLists.txt  main.cpp
src/ast/: CMakeLists.txt  ast.cpp  ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  semantic.cpp  semantic.hpp  token.cpp  token.hpp  type.cpp  type.hpp
src/codegen/: CMakeLists.txt  codegen.cpp  codegen.hpp  extern.hpp  jit_codegen.cpp  jit_codegen.hpp  jit_engine.cpp  jit_engine.hpp  operator_function.cpp  operator_function.hpp  symbol_table.cpp  symbol_table.hpp
src/utils/: CMakeLists.txt  rustic_match.hpp
test/: CMakeLists.txt  main_test.cpp
test/ast/: lexer_test.hpp  parser_test.hpp
test/codegen/: codegen_test.hpp
